# platotermzx

./: .gitmodules  CMakeLists.txt  Makefile.zx-ESPATcmd  Makefile.zx-ESPATdrv  Makefile.zx-esp8266  Makefile.zx-spectranet  Makefile.zxn-ESPATcmd  Makefile.zxn-ESPATdrv  zcc_opt.def
build-ESP8266/: platoTERM.tap
build-ESTATdrv/: platoTERM.sna
src/: connect.c  io.c  keyboard.c  main.c  screen.c  specnext.h  splash.h  splash_specnext.h  splash_spectrum.h  uart.c
